# sekigae-rs

./: .gitignore  Cargo.toml  LICENSE  LICENSE-UDEVGOTHIC  README.md  seats.typ  students.json
.github/workflows/: release-v2.yml
src/: fetch.rs  gui.rs  main.rs  model.rs  output.rs  sample.rs  solver.rs
src/gui/: app.rs  export.rs  fullscreen.rs  io.rs  state.rs  views.rs
